--- a/README.Rmd
+++ b/README.Rmd
@@ -122,89 +122,25 @@ plot_messi(n = n, alpha.a.hat = test$alpha.a.hat, beta.m.hat = test$beta.m.hat, 
 ### Test case with non-null mediation effect
 
 ```{r, eval=FALSE}
-#Generate Data from Mediation Model
-set.seed(20220222)
-n <- 200
-p.con <- 5
-p.mediators <- 50
-rho.con.exp <- 0.2
-rho.mediators <- 0.2
-r2.mediator <- 0.05
-total.effect.internal <- 1
-r2.outcome <- 0.2
-n.external.ratio <- 100
-is.same.external <- TRUE
-total.effect.external <- total.effect.internal
-sim.dat <- sim.data(n = n, p.con = p.con, p.mediators = p.mediators, rho.con.exp = rho.con.exp,
-                    rho.mediators = rho.mediators, r2.mediator = r2.mediator, r2.outcome = r2.outcome,
-                    total.effect.internal = total.effect.internal,
-                    n.external.ratio = n.external.ratio, is.same.external = is.same.external,
-                    total.effect.external = total.effect.external)
+data(Med)
 
-#True parameter values that generated the data
-alpha.a.true <- sim.dat$alpha.a
-alpha.c.true <- sim.dat$alpha.c
-Sigma.m.true <- sim.dat$Sigma.m
-beta.m.true <- sim.dat$beta.m
-beta.a.true <- sim.dat$beta.a
-beta.c.true <- sim.dat$beta.c
-sigma.e.sq.true <- sim.dat$sigma.e.sq
+Y = Med$Y
+M = Med$M
+A = Med$A
+C = Med$C
+T.hat.external = Med$T.hat.external
+var.T.hat.external = Med$var.T.hat.external
 
-#Estimated Internal and External Total Effects
-T.hat.internal <- sim.dat$T.hat.internal
-var.T.hat.internal <- sim.dat$var.T.hat.internal
-T.hat.external <- sim.dat$T.hat.external
-var.T.hat.external <- sim.dat$var.T.hat.external
+test <- messi(Y = Y, M = M, A = A, C = C, method = 'Unconstrained', T.hat.external = T.hat.external,
+              var.T.hat.external = var.T.hat.external, s2.fixed = NULL)
 
-set.seed(20230419)
-Y <- sim.dat$Y
-M <- sim.dat$M
-A <- sim.dat$A
-C <- sim.dat$C
-method <- "Unconstrained"
-s2.fixed <- NULL
+n = Med$n
+p = Med$p
 
-test <- messi(Y = Y, M = M, A = A, C = C, method = method, T.hat.external = T.hat.external,
-              var.T.hat.external = var.T.hat.external, s2.fixed = s2.fixed)
+plot_messi(n = n, alpha.a.hat = test$alpha.a.hat, beta.m.hat = test$beta.m.hat, 
+           labels = paste0("M",1:p), asym.var.mat = test$asym.var.mat)
+              
+test <- messi(Y = Y, M = M, A = A, C = C, method = 'Hard', T.hat.external = T.hat.external,
+              var.T.hat.external = var.T.hat.external, s2.fixed = NULL)
 
-plot_messi(n = n, alpha.a.hat = test$alpha.a.hat, beta.m.hat = test$beta.m.hat, labels = paste0("M",1:p), asym.var.mat = test$asym.var.mat)
-
-set.seed(20230419)
-Y <- sim.dat$Y
-M <- sim.dat$M
-A <- sim.dat$A
-C <- sim.dat$C
-method <- "Hard"
-s2.fixed <- NULL
-
-test <- messi(Y = Y, M = M, A = A, C = C, method = method, T.hat.external = T.hat.external,
-              var.T.hat.external = var.T.hat.external, s2.fixed = s2.fixed)
-
-plot_messi(n = n, alpha.a.hat = test$alpha.a.hat, beta.m.hat = test$beta.m.hat, labels = paste0("M",1:p), asym.var.mat = test$asym.var.mat)
-
-set.seed(20230419)
-Y <- sim.dat$Y
-M <- sim.dat$M
-A <- sim.dat$A
-C <- sim.dat$C
-method <- "Soft EB"
-s2.fixed <- NULL
-
-test <- messi(Y = Y, M = M, A = A, C = C, method = method, T.hat.external = T.hat.external,
-              var.T.hat.external = var.T.hat.external, s2.fixed = s2.fixed)
-
-plot_messi(n = n, alpha.a.hat = test$alpha.a.hat, beta.m.hat = test$beta.m.hat, labels = paste0("M",1:p), asym.var.mat = test$asym.var.mat)
-
-set.seed(20230419)
-Y <- sim.dat$Y
-M <- sim.dat$M
-A <- sim.dat$A
-C <- sim.dat$C
-method <- "Soft Fixed"
-s2.fixed <- 1
-
-test <- messi(Y = Y, M = M, A = A, C = C, method = method, T.hat.external = T.hat.external,
-              var.T.hat.external = var.T.hat.external, s2.fixed = s2.fixed)
-
-plot_messi(n = n, alpha.a.hat = test$alpha.a.hat, beta.m.hat = test$beta.m.hat, labels = paste0("M",1:p), asym.var.mat = test$asym.var.mat)
 ```
