--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,8 @@ knitr::opts_chunk$set(
 
 ## Overview
 
-This `R` package fits the hard constraint, soft constraint, and unconstrained models in Boss et al. (2023) for mediation analyses with external summary-level information on the total effect.
+This `R` package tits the MESSI, hard constraint, and unconstrained models in Boss 
+et al. (2023) <arXiv:2306.17347> for mediation analyses with external summary-level information on the total effect.
 
 ## Installation
 
@@ -91,7 +92,7 @@ Y <- rnorm(n = n, mean = 0, sd = 1)
 M <- mvrnorm(n = n, mu = rep(0, p), Sigma = diag(1, p))
 A <- rnorm(n = n, mean = 0, sd = 1)
 C <- NULL
-method <- "Soft EB"
+method <- "MESSI EB"
 s2.fixed <- NULL
 T.hat.external <- 0
 var.T.hat.external <- 0.2
@@ -108,7 +109,7 @@ Y <- rnorm(n = n, mean = 0, sd = 1)
 M <- mvrnorm(n = n, mu = rep(0, p), Sigma = diag(1, p))
 A <- rnorm(n = n, mean = 0, sd = 1)
 C <- NULL
-method <- "Soft Fixed"
+method <- "MESSI Fixed"
 s2.fixed <- 1
 T.hat.external <- 0
 var.T.hat.external <- 0.2
